# Real-Time-Edge-Detection-Viewer

./: README.md  build.gradle  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edgedetectionviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processing.cpp
app/src/main/java/com/example/edgedetectionviewer/: MainActivity.kt  NativeProcessor.kt
app/src/main/java/com/example/edgedetectionviewer/camera/: CameraHandler.kt
app/src/main/java/com/example/edgedetectionviewer/gl/: GLRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgedetectionviewer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: README.md  USAGE.md  package.json  tsconfig.json  working-viewer.html
web/src/: index.ts
